--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnApp">
         <activity
+            android:name=".account.AboutAppActivity"
+            android:exported="true" />
+        <activity
+            android:name=".account.EditAccountActivity"
+            android:exported="true" />
+        <activity
+            android:name=".rank.DetailStudentActivity"
+            android:exported="true" />
+        <activity
             android:name=".home.task.DetailTaskActivity"
             android:exported="true" />
         <activity
@@ -19,7 +28,7 @@
             android:name=".home.DetailModulesActivity"
             android:exported="true" />
         <activity
-            android:name="com.aisyah.learnapp.activity.login.LoginActivity"
+            android:name=".activity.login.LoginActivity"
             android:exported="true" />
         <activity
             android:name=".onboarding.OnBoardingActivity"
