--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+
+    //anko
+    implementation "org.jetbrains.anko:anko:0.10.8"
 }
