--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     implementation 'com.rengwuxian.materialedittext:library:2.1.4' //desain edittext
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0' //untuk memulai sebuah activity
 
+    //datastore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
     //ui navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
@@ -104,9 +107,9 @@ dependencies {
 
     // Lifecycle / live data
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 
     //anko
     implementation "org.jetbrains.anko:anko:0.10.8"
