--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <application
         android:allowBackup="true"
+        android:configChanges="uiMode"
         android:icon="@mipmap/ic_finallauncherapps"
         android:label="@string/appname"
         android:roundIcon="@mipmap/ic_finallauncherapps"
